# MAPS-VLA

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements-exact.txt
experiments/robot/: openvla_utils.py  robot_utils.py
experiments/robot/libero/: libero_utils.py
experiments/robot/simpler/: run_simpler_eval.py  simpler_benchmark.py
pretrained_models/configs-openvla-7b/: modeling_prismatic.py
prismatic/models/: action_heads.py  load.py
prismatic/training/: train_utils.py
prismatic/training/optimizers/: __init__.py
prismatic/vla/: action_tokenizer.py  constants.py  materialize.py
scripts/: eval_calvin_parallel.py  eval_libero.py  merge_lora.py  train.py
slurm/: submit.sh
slurm/eval/: eval_calvin.sh  eval_libero.sh  eval_simpler.sh
slurm/train/: train_bridge_minivlaoft.sh  train_bridge_openvlaoft.sh  train_calvin_minivlaoft.sh  train_calvin_openvlaoft.sh  train_franka_minivlaoft.sh  train_libero_minivlaoft.sh  train_libero_openvlaoft.sh
